# xi-sdk-resellers-python

./: .gitlab-ci.yml  .travis.yml  LICENCE  README.md  getting-started.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yml  publishv2.yml  (+1 more)
.openapi-generator/: FILES
docs/: AccesstokenApi.md  AccesstokenResponse.md  AddressType.md  AsyncOrderCreateApi.md  AsyncOrderCreateDTO.md  AsyncOrderCreateDTOAdditionalAttributesInner.md  AsyncOrderCreateDTOEndUserInfo.md  AsyncOrderCreateDTOLinesInner.md  AsyncOrderCreateDTOLinesInnerEndUserInfoInner.md  AsyncOrderCreateDTOResellerInfo.md  AsyncOrderCreateDTOShipToInfo.md  AsyncOrderCreateDTOShipmentDetails.md  AsyncOrderCreateDTOVmfadditionalAttributesInner.md  AsyncOrderCreateDTOWarrantyInfoInner.md  AsyncOrderCreateDTOWarrantyInfoInnerSerialInfoInner.md  AsyncOrderCreateDTOWarrantyInfoInnerVmfAdditionalAttributesLinesInner.md  AsyncOrderCreateResponse.md  AvailabilityAsyncNotificationRequest.md  AvailabilityAsyncNotificationRequestResourceInner.md  AvailabilityAsyncNotificationRequestResourceInnerLinksInner.md  DealsApi.md  DealsDetailsResponse.md  DealsDetailsResponseProductsInner.md  DealsSearchResponse.md  DealsSearchResponseDealsInner.md  Error.md  ErrorResponse.md  ErrorResponseDTO.md  ErrorResponseErrorsInner.md  ErrorResponseErrorsInnerFieldsInner.md  Fields.md  FreightEstimateApi.md  FreightRequest.md  FreightRequestLinesInner.md  FreightRequestShipToAddress.md  FreightRequestShipToAddressInner.md  FreightResponse.md  FreightResponseFreightEstimateResponse.md  FreightResponseFreightEstimateResponseDistributionInner.md  FreightResponseFreightEstimateResponseDistributionInnerCarrierListInner.md  (+412 more)
test/: test_accesstoken_api.py  test_accesstoken_response.py  test_address_type.py  test_async_order_create_api.py  test_async_order_create_dto.py  test_async_order_create_dto_additional_attributes_inner.py  test_async_order_create_dto_end_user_info.py  test_async_order_create_dto_lines_inner.py  test_async_order_create_dto_lines_inner_end_user_info_inner.py  test_async_order_create_dto_reseller_info.py  test_async_order_create_dto_ship_to_info.py  test_async_order_create_dto_shipment_details.py  test_async_order_create_dto_vmfadditional_attributes_inner.py  test_async_order_create_dto_warranty_info_inner.py  test_async_order_create_dto_warranty_info_inner_serial_info_inner.py  test_async_order_create_dto_warranty_info_inner_vmf_additional_attributes_lines_inner.py  test_async_order_create_response.py  test_availability_async_notification_request.py  test_availability_async_notification_request_resource_inner.py  test_availability_async_notification_request_resource_inner_links_inner.py  test_deals_api.py  test_deals_details_response.py  test_deals_details_response_products_inner.py  test_deals_search_response.py  test_deals_search_response_deals_inner.py  test_error.py  test_error_response.py  test_error_response_dto.py  test_error_response_errors_inner.py  test_error_response_errors_inner_fields_inner.py  test_fields.py  test_freight_estimate_api.py  test_freight_request.py  test_freight_request_lines_inner.py  test_freight_request_ship_to_address.py  test_freight_request_ship_to_address_inner.py  test_freight_response.py  test_freight_response_freight_estimate_response.py  test_freight_response_freight_estimate_response_distribution_inner.py  test_freight_response_freight_estimate_response_distribution_inner_carrier_list_inner.py  (+412 more)
xi-sdk-python/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
xi-sdk-resellers-python/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
(+1310 files in other folders)
