[project]
name = "xi.sdk.resellers"
version = "1.2.1"  # Updated from 1.0.0 to match setup.py
description = "Ingram Micro - Xvantage Integration (XI) Python Server-side SDK."  # Longer description from setup.py
authors = [
  {name = "Ingram Micro Xvantage Integration(XI)", email = "xi_support@ingrammicro.com"},
]
license = {text = "MIT"}  # Explicit for clarity; matches setup.py
readme = "README.md"
# long_description_content_type = "text/markdown"  # Add this; inferred from readme but explicit is better for PyPI
keywords = ["xvantage", "ingrammicro", "resellerapi", "xvantage integration"]  # Updated to match setup.py (replaces previous)
requires-python = ">=3.8"  # Relaxed from >=3.9 to match setup.py
dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",  # Matches REQUIRES
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)",
]

[project.urls]
Repository = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"  # Existing
Homepage = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"  # Add; common for PyPI
Download = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/archive/1.2.1.tar.gz"  # Updated version; from setup.py
"Release Notes" = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/releases/"  # From setup.py

classifiers = [  # Full list from setup.py for better PyPI discoverability
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",  # Added for API relevance
]