[project]
name = "xi.sdk.resellers"
version = "1.3.0"
description = "Ingram Micro - Xvantage Integration (XI) Python Server-side SDK."
authors = [
  {name = "Ingram Micro Xvantage Integration(XI)", email = "xi_support@ingrammicro.com"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["xvantage", "ingrammicro", "resellerapi", "xvantage integration"]
requires-python = ">=3.8"
dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP"
]

[project.urls]
repository = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"
homepage = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python"
download = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/archive/1.3.0.tar.gz"
release-notes = "https://github.com/ingrammicro-xvantage/xi-sdk-resellers-python/releases/"
